--- a/Readme
+++ b/Readme
@@ -3,3 +3,6 @@ Coucou, tu make, tu executes le programme so_long avec une map de ton choix.
 ENTER
 
 Bizbiz
+
+ps : assure toi de te delecter du maximum de pasteques
+pps : attention au typhon plus black que le blackhole
